<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.arc.prith.androidremotecontrol.MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/layout_AdminCredentials"
        android:visibility="invisible"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_weight="0.48"
            android:layout_height="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_loginID"
            android:hint="Login ID" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_Password"
            android:hint="Password" />

        <Button
            android:text="LOG IN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_AdminLogIn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_AdminLogIn_OnClick" />

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_BackToUserInterface"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_HideAdminCredentials_OnClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_UserInterface"
        android:visibility="visible"
        android:gravity="center"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:text="@string/vid1_button_title"
            android:layout_width="match_parent"
            android:id="@+id/btn_Vid1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_Vid1_OnClick"
            android:layout_height="112dp" />

        <Button
            android:text="@string/vid2_button_title"
            android:layout_width="match_parent"
            android:id="@+id/btn_Vid2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_Vid2_OnClick"
            android:layout_height="112dp" />

        <Button
            android:text="@string/vid3_button_title"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:id="@+id/btn_Vid3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_Vid3_OnClick"/>

        <Button
            android:text="..."
            android:layout_width="40dp"
            android:id="@+id/btn_RevealAdminCredentials"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="btn_RevealAdminCredentials_OnClick"
            android:layout_height="40dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

    </LinearLayout>

</RelativeLayout>
