<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arc.prith.androidremotecontrol.SettingsActivity"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_Log"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lbl_Log"
                android:minLines="28"
                android:maxLines="28"
                android:scrollbars = "vertical"/>

            <Button
                android:text="Clear Log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ClearLog"
                android:onClick="btn_ClearLog_OnClick"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:text="Back To Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ToSettings"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="btn_Back_OnClick" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_Settings">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:visibility="visible">

    <TextView
        android:text="Start Command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_StartCmd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_StartCmd" />

    <TextView
        android:text="Stop Command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_StopCmd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_StopCmd" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Video 1 Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid1Name"
            android:layout_weight="1" />

        <TextView
            android:text="Video 1 Delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid1Delay"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_Vid1Name"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_Vid1Delay"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Video 2 Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid2Name"
            android:layout_weight="1" />

        <TextView
            android:text="Video 2 Delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid2Delay"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_Vid2Name"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_Vid2Delay"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Video 3 Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid3Name"
            android:layout_weight="1" />

        <TextView
            android:text="Video 3 Delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_Vid3Delay"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_Vid3Name"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.EditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_Vid3Delay"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:text="Host IP Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_IPAddr" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txt_IPAddr"
        android:inputType="phone" />

    <TextView
        android:text="Host Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_Port" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txt_Port" />

    <Button
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="btn_Save_OnClick" />

    <Button
        android:text="Back To User Screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="btn_Cancel_OnClick" />

    <Button
        android:text="Show Log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ShowLog"
        android:onClick="btn_ShowLog_OnClick"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>
</ScrollView>
    </RelativeLayout>